# metronome

./: CMakeLists.txt  README.md  meson.build
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
data/: CMakeLists.txt  com.github.artemanufrij.metronome.appdata.xml  com.github.artemanufrij.metronome.appdata.xml.in  com.github.artemanufrij.metronome.appdata.xml~  com.github.artemanufrij.metronome.desktop  com.github.artemanufrij.metronome.desktop.in  meson.build  metronome.desktop
debian/: changelog  changelog~  control  copyright
meson/: post_install.py
po/: CMakeLists.txt  POTFILES  com.github.artemanufrij.metronome.pot  de.mo  de.po  fr.po  lt.po  meson.build  metronome.pot  nl.po  pt.po
po/extra/: LINGUAS  POTFILES  de.po  extra.pot  fr.po  lt.po  nl.po  pt.po
schemas/: CMakeLists.txt  com.github.artemanufrij.metronome.gschema.xml  meson.build  org.pantheon.metronome.gschema.xml
src/: CMakeCache.txt  CMakeLists.txt  Config.vala.in  Makefile  Metronome.vala  Settings.vala  cmake_install.cmake  meson.build
src/Objects/: Click.vala  Preset.vala
src/Widgets/: PresetRow.vala  Presets.vala  Volumes.vala
src/data/: Makefile
src/po/: Makefile  cmake_install.cmake
src/schemas/: Makefile  cmake_install.cmake
src/src/: Makefile  Metronome.c  cmake_install.cmake
src/src/Objects/: Click.c
src/src/Widgets/: PresetRow.c  Presets.c  Volumes.c
src/src/src/: Config.c
